--- a/sass/views/_sinusoid.scss
+++ b/sass/views/_sinusoid.scss
@@ -1,6 +1,15 @@
 
 @import '../global';
 
+.sinusoid-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+    * { pointer-events: auto; }
+}
+
 #sinusoid-h {
     position: absolute;
     width: 1000%;
@@ -94,7 +103,7 @@
 
 
 #sinusoid-v {
-    position: absolute;
+    position: fixed;
     margin: 0 0 0 -75px;
     width: 150px;
     height: 1000%;
